# requests-retry-session

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  GNUmakefile  GitVersion.yml  Jenkinsfile.github  MANIFEST.in  Makefile  README.adoc  README.md  VERSIONING.adoc  cache_pip.sh  entry_points.ini  gen_test_constraints.py  myapp.spec  mypy.ini  noxfile.py  pyproject.toml  requests-retry-session.spec  run_test_rrs.sh  setup.sh  test_rrs.py  test_rrs.sh  update_versions.conf  validate-constraints.txt  validate-requirements.txt  validate_skip_rc.sh
.github/workflows/: dependabot-changelog-helper.yml  deploy-docs.yml  gitflow-mergeback.yml  license-check.yaml  lint.yml  tests.yml
requests_retry_session/: __init__.py  pyproject.toml  requests_retry_session.py  retry_session_manager.py  retry_with_logs.py  timeout_http_adapter.py  utils.py
requests_retry_session/src/requests_retry_session/: __init__.py  retry_session_manager.py
rrs/: pyproject.toml
rrs/src/requests_retry_session/: __init__.py  requests_retry_session.py  retry_session_manager.py  retry_with_logs.py  timeout_http_adapter.py  typing_imports.py  utils.py
test-rrs/: pyproject.toml
test-rrs/src/test_rrs/: __init__.py  __main__.py  certs.py  defs.py  do_request.py  request_sessions.py  results.py  server.py  servers.py  suppress_ssl_warnings.py  test.py  test_http_handler.py  typing_imports.py  utils.py
test-rrs/src/test_rrs/rrs_lib/: __init__.py  my_rr_session_manager.py  rr_adapter_args.py
test-rrs/src/test_rrs/server/: __init__.py  certs.py  defs.py  server.py  test_http_handler.py
test-rrs/src/test_rrs/test_suites/: __init__.py  call_test_req.py  defs.py  test_suite1.py  test_suite_base.py
test-rrs/src/test_rrs/utils/: __init__.py  suppress_ssl_warnings.py
test_rrs/: __main__.py  certs.py  defs.py  request_sessions.py  server.py  suppress_ssl_warnings.py  test.py  utils.py
