#
# MIT License
#
# (C) Copyright 2024-2026 Hewlett Packard Enterprise Development LP
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included
# in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
# OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
# OTHER DEALINGS IN THE SOFTWARE.
#

[project]
name = 'requests-retry-session'
authors = [
    { name = 'Hewlett Packard Enterprise Development LP' },
]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
description = 'Create requests session with timeouts and retries for CSM usage.'
dependencies = [
    "requests>=2.16.2; python_version < '3.10'",
    "requests>=2.19.0; python_version >= '3.10' and python_version < '3.12'",
    "requests>=2.25.0; python_version >= '3.12'",
    "typing-extensions>=3.7.4.3 ; python_version < '3.9'",
    "typing-extensions>=4.6 ; python_version >= '3.9'",
    "urllib3>=1.23; python_version >= '3.10' and python_version < '3.12'",
    "urllib3>=1.26.5; python_version >= '3.12'"
]
maintainers = [
    { name = 'Mitch Harding', email = 'mitchell.harding@hpe.com'}
]
requires-python = '>=3.6'
# The actual version is filled in at build time
version = '0.0.57'

[metadata]
url = 'https://github.com/Cray-HPE/requests-retry-session'

license = { file = '../LICENSE' }

[project.optional-dependencies]
ci = [
    'nox',
]
lint = [
    'pycodestyle',
    'pylint',
]

# Defines which folders belong to our package.
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'wheel',
]
